--- a/index.html
+++ b/index.html
@@ -55,20 +55,22 @@
     </style>
 </head>
 <body>
-   
+   <script>
+       alert("ขอต้อนรับสู่ website ของชนาธิป")
+   </script>
     <div class="head">
         <h1>APE 100 WEBSITE</h1>
         <p>Create By Chanathip Seangchamsai</p>
     </div> 
     <div class="menu">
-        <a href="MTH.html" target="_blank">MTH 102</a>
-        <a href="GEN.html" target="_blank">GEN 111C</a>
-        <a href="LNG.html" target="_blank">LNG 220</a>
-        <a href="APE112.html" target="_blank">APE 112</a>
-        <a href="PHY192.html" target="_blank">PHY 192</a>
-        <a href="PHY104.html" target="_blank">PHY 104</a>
-        <a href="APE122.html" target="_blank">APE 122</a>
-        <a href="APE100.html" target="_blank">APE 100</a>
+        <a href="MTH.html">MTH 102</a>
+        <a href="GEN.html">GEN 111C</a>
+        <a href="LNG.html">LNG 220</a>
+        <a href="APE112.html">APE 112</a>
+        <a href="PHY192.html">PHY 192</a>
+        <a href="PHY104.html">PHY 104</a>
+        <a href="APE122.html">APE 122</a>
+       <a href="APE100.html">APE 100</a> 
     </div>
     &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<img src="4.png", width= 200px , height= 200px;>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
     <img src="5.png", width= 400px , height= 250px;>
